<?xml version="1.0"?>
<package format="2">
  <name>heron_sim</name>
  <version>0.0.0</version>
  <description>The heron_sim package</description>

  <maintainer email="rjulia@robotnik.es">Raquel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

    <metapackage/>

  </export>
  
</package>
